Fix: width too big

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ footer{
     justify-content: center;
     padding: 0.75rem;
     gap: 2rem;
+    max-width: 60%;
 }
 
 .avatar{
@@ -53,7 +54,7 @@ footer{
 
 .designBox{
     background: rgb(41, 40, 110);
-    max-width: 90%;
+    max-width: 80%;
     padding: 0.625rem;
     border-radius: 1.25rem 1.25rem 1.25rem 1.25rem;
     margin-bottom: 0.625rem;
